--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.11"
 dependencies = [
     "rich>=13.7",
     "numpy>=1.26",
+    "pydantic (>=2.12.5,<3.0.0)",
 ]
 
 [project.optional-dependencies]
