--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,20 @@
-[build-system]
-requires = ["setuptools>=68", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[project]
-name = "scoutsearch"
+[tool.poetry]
+name = "scout"
 version = "0.1.0"
-description = "A modular, benchmarkable search engine with ranking experimentation"
-readme = "README.md"
-requires-python = ">=3.11"
-dependencies = [
-    "rich>=13.7",
-    "numpy>=1.26",
-    "pydantic (>=2.12.5,<3.0.0)",
+description = "ScoutSearch benchmark and search project"
+authors = ["Bonnie McConnell bonniep.mcconnell@gmail.com"]
+packages = [
+    { include = "scout" }
 ]
 
-[project.optional-dependencies]
-dev = [
-    "pytest>=8.0",
-]
+[tool.poetry.dependencies]
+python = "^3.11"
+rich = "^14.2"
+numpy = "^2.4"
+pydantic = "^2.12.5"
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["scout*"]
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2"
 
 [tool.poetry.scripts]
 scout = "scout.cli:main"
