--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,8 @@
 name = "scout"
 version = "0.1.0"
 description = "ScoutSearch benchmark and search project"
-authors = ["Bonnie McConnell bonniep.mcconnell@gmail.com"]
-packages = [
-    { include = "scout" }
-]
+authors = ["Bonnie McConnell <bonniep.mcconnell@gmail.com>"]
+packages = [{ include = "scout" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -15,14 +13,31 @@ pydantic = "^2.12.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2"
+ruff = "^0.5.5"
+mypy = "^1.10.0"
 
 [tool.poetry.scripts]
 scout = "scout.cli:main"
 
-[mypy]
-python_version = 3.11
-strict = true
+# ----------------------------
+# Ruff
+# ----------------------------
 
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+
+[tool.ruff.lint]
+select = ["E", "F", "B", "I", "UP"]
+ignore = ["E501"]
+
+# ----------------------------
+# Mypy
+# ----------------------------
+
+[tool.mypy]
+python_version = "3.11"
+strict = true
 warn_unused_configs = true
 warn_redundant_casts = true
 warn_unused_ignores = true
@@ -31,5 +46,5 @@ disallow_subclassing_any = true
 no_implicit_optional = true
 check_untyped_defs = true
 
-[mypy-scout.*]
+[tool.mypy.scout.*]
 ignore_missing_imports = false
