--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,6 @@ mypy = "^1.10.0"
 [tool.poetry.scripts]
 scout = "scout.cli:main"
 
-# ----------------------------
-# Ruff
-# ----------------------------
-
 [tool.ruff]
 line-length = 88
 target-version = "py311"
@@ -30,10 +26,6 @@ target-version = "py311"
 [tool.ruff.lint]
 select = ["E", "F", "B", "I", "UP"]
 ignore = ["E501"]
-
-# ----------------------------
-# Mypy
-# ----------------------------
 
 [tool.mypy]
 python_version = "3.11"
@@ -46,5 +38,5 @@ disallow_subclassing_any = true
 no_implicit_optional = true
 check_untyped_defs = true
 
-[tool.mypy.scout.*]
+[tool.mypy."scout.*"]
 ignore_missing_imports = false
