--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
-[tool.poetry]
+[project]
 name = "scout"
 version = "0.1.0"
 description = "ScoutSearch benchmark and search project"
 authors = ["Bonnie McConnell <bonniep.mcconnell@gmail.com>"]
+
+[tool.poetry]
 packages = [{ include = "scout" }]
 
 [tool.poetry.dependencies]
@@ -16,7 +18,7 @@ pytest = "^8.2"
 ruff = "^0.5.5"
 mypy = "^1.10.0"
 
-[tool.poetry.scripts]
+[project.scripts]
 scout = "scout.cli:main"
 
 [tool.ruff]
@@ -38,5 +40,6 @@ disallow_subclassing_any = true
 no_implicit_optional = true
 check_untyped_defs = true
 
-[tool.mypy."scout.*"]
+[[tool.mypy.overrides]]
+module = ["scout.*"]
 ignore_missing_imports = false
