--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,18 @@ requires-python = ">=3.11"
 authors = [
     { name = "Bonnie McConnell", email = "bonniep.mcconnell@gmail.com" }
 ]
-license = "MIT"
+license = { text = "MIT" }
 keywords = ["search", "benchmark", "information-retrieval"]
+
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Typing :: Typed",
+]
 
 dependencies = [
     "rich>=14.2",
